test: enforce JaCoCo 90% line+branch gate with full-suite coverage
Wire jacoco-maven-plugin 0.8.15 (prepare-agent/report/check, BUNDLE+CLASS
≥90% LINE+BRANCH, bootstrap-only exclusion) plus Mockito static agent via
@{argLine} coexistence and Lombok @Generated filtering. Add ~260 tests
covering filters, guardrails, mappers, services, CLI, and config
boundaries (386 total, 0 failures; bundle 98% line / 95.2% branch).
Refactor CliRunner to ExitCodeGenerator; fix final picocli @Options;
adopt Spring 7 status constants. Docs updated.